--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
   ],
   "require": {
     "php": ">=7.0",
-    "illuminate/contracts": "^5.6.5",
-    "illuminate/support": "^5.6.5"
+    "illuminate/contracts": "^5.6.5 || ^6.*",
+    "illuminate/support": "^5.6.5 || ^6.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.4",
-    "laravel/framework": "^5.6.5"
+    "laravel/framework": "^5.6.5 || ^6.20.14"
   },
   "autoload": {
     "psr-4": {
