--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
   ],
   "require": {
     "php": ">=7.0",
-    "illuminate/contracts": "^5.6.5 || ^6.*",
-    "illuminate/support": "^5.6.5 || ^6.*"
+    "illuminate/contracts": "^5.6.5 || ^6.0",
+    "illuminate/support": "^5.6.5 || ^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^6.4",
